crates/atlas-runtime/tests/snapshots/frontend_syntax__array_index.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Index:
            target:
              Identifier:
                name: arr
                span:
                  start: 0
                  end: 3
            index:
              Single:
                Literal:
                  - Number: 0
                  - start: 4
                    end: 5
            span:
              start: 0
              end: 6
        span:
          start: 0
          end: 7
