crates/atlas-runtime/tests/snapshots/frontend_syntax__bool_false.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - Bool: false
            - start: 0
              end: 5
        span:
          start: 0
          end: 6
