crates/atlas-runtime/tests/snapshots/frontend_syntax__bool_true.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - Bool: true
            - start: 0
              end: 4
        span:
          start: 0
          end: 5
