crates/atlas-runtime/tests/snapshots/frontend_syntax__break_statement.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Break:
        start: 0
        end: 6
