crates/atlas-runtime/tests/snapshots/frontend_syntax__continue_statement.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Continue:
        start: 0
        end: 9
