crates/atlas-runtime/tests/snapshots/frontend_syntax__empty_array.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          ArrayLiteral:
            elements: []
            span:
              start: 0
              end: 2
        span:
          start: 0
          end: 3
