crates/atlas-runtime/tests/snapshots/frontend_syntax__float_literal.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - Number: 3.14
            - start: 0
              end: 4
        span:
          start: 0
          end: 5
